# HammEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt  cpp.hint
ExampleGame/: CMakeLists.txt  Cube.cpp  Cube.h  ExampleGame.cpp  Player.cpp  Player.h
HammEngine/: CMakeLists.txt  Component.cpp  Component.h  ComponentTypes.h  GameObject.cpp  GameObject.h  KeyboardListener.h  MatrixUtils.cpp  MatrixUtils.h  MouseListener.h  Scene.cpp  Scene.h  Vector3.h  Window.cpp  Window.h  common.h
HammEngine/Components/: Mesh.cpp  Mesh.h  ShaderProgram.cpp  ShaderProgram.h
HammEngine/GameObjects/: Camera.cpp  Camera.h
HammEngine/Meshes/: Cube.cpp  Cube.h
HammEngine/Shaders/: BasicFragment.glsl  BasicVertex.glsl  PhongFragment.glsl  PhongVertex.glsl
